@@ -7,4 +7,5 @@
                  [amazonica "0.1.13"]
                  [clj-campfire "2.2.0"]
                  [environ "0.4.0"]]
-  :main onyx-dragon.core)
+  :main onyx-dragon.core
+  :jvm-opts ["-server" "-XX:+UseConcMarkSweepGC" "-XX:+UseCompressedOops"])
